--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:latest
@@ -14,11 +12,13 @@ services:
     networks:
       - mynetwork
 
-  web:
-    build: .
+  server:
+    build:
+      context: .
+      dockerfile: server/Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/app
+      - ./server:/app
     ports:
       - "8000:8000"
     depends_on:
