--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean
 WORKDIR /app/app
 
-COPY requirements.txt .
+COPY server/requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
