ci: :whale: : Add docker container client
Add dockerfile for client
Add .dockerignore for client
Add client for docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,15 @@ services:
       - POSTGRES_USER=myuser
       - POSTGRES_PASSWORD=mypassword
 
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    networks:
+      - mynetwork
+
 networks:
   mynetwork:
 
