--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,11 @@ services:
     build:
       context: .
       dockerfile: server/Dockerfile
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "
+            python manage.py makemigrations &&
+            python manage.py migrate &&
+            python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./server:/app
     ports:
