feat(admin): Superuser created with docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       sh -c "
             python manage.py makemigrations &&
             python manage.py migrate &&
+            python manage.py createadmin &&
             python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./server:/app
@@ -34,6 +35,9 @@ services:
       - POSTGRES_DB=mydatabase
       - POSTGRES_USER=myuser
       - POSTGRES_PASSWORD=mypassword
+      - ADMIN_USER=admin_user
+      - ADMIN_PASSWORD=secure_password
+      - ADMIN_EMAIL=admin@gmail.com
 
 networks:
   mynetwork:
