--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "music-player": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
