--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "conventionalCommits.scopes": ["frontend"],
+  "conventionalCommits.scopes": ["frontend", "theme"],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
   "eslint.validate": [
