--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "conventionalCommits.scopes": ["frontend", "theme"],
+  "conventionalCommits.scopes": ["frontend", "theme", "auth"],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
   "eslint.validate": [
