feat: Add service login and config
Add config for api request
Add service login
Update service form

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
       - "3000:80"
     networks:
       - mynetwork
+    environment:
+      - VITE_API_URL=http://server:8000/api
 
 networks:
   mynetwork:
