feat(player): :necktie: Update player
Update player ui
Update player logic
Add context music player

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "conventionalCommits.scopes": ["frontend", "theme", "auth"],
+  "conventionalCommits.scopes": ["frontend", "theme", "auth", "player"],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
   "eslint.validate": [
