style(sidebar): :lipstick: Update sidebar ui
Add component log
Add component sidebar
Update sidebar ui

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
-  "conventionalCommits.scopes": ["frontend", "theme", "auth", "player"],
+  "conventionalCommits.scopes": [
+    "frontend",
+    "theme",
+    "auth",
+    "player",
+    "sidebar"
+  ],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
   "eslint.validate": [
