feat(home): :sparkles: Add home page
Add banner component
Add music card component
Add grid music card component of home
Fetch popular album
Fetch popular artists
Add skeleton for ui
Integrate in home

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -4,7 +4,8 @@
     "theme",
     "auth",
     "player",
-    "sidebar"
+    "sidebar",
+    "home"
   ],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
