feat(search): :lipstick: Add search desktop ui
Add color in theme
Update input search for desktop

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -5,7 +5,8 @@
     "auth",
     "player",
     "sidebar",
-    "home"
+    "home",
+    "search"
   ],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
