feat(album): :sparkles: Add Album page
Add album page
Add fetch album
Add function select track by id on state

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -6,7 +6,8 @@
     "player",
     "sidebar",
     "home",
-    "search"
+    "search",
+    "album"
   ],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
