--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
