--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -7,7 +7,8 @@
     "sidebar",
     "home",
     "search",
-    "album"
+    "album",
+    "explore"
   ],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
