feat(history): :sparkles: Add history
Add history as recent page

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -8,7 +8,9 @@
     "home",
     "search",
     "album",
-    "explore"
+    "explore",
+    "recents",
+    "history"
   ],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
