feat(favorites): :sparkles: Add favorites page
Add favorites page
Add favorites store
Add favorites fetch

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -10,7 +10,8 @@
     "album",
     "explore",
     "recents",
-    "history"
+    "history",
+    "favorites"
   ],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
