--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -11,7 +11,8 @@
     "explore",
     "recents",
     "history",
-    "favorites"
+    "favorites",
+    "details"
   ],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
