--- a/server/app/ia/api_flask/.env
+++ b/server/app/ia/api_flask/.env
@@ -1,3 +1,2 @@
-SPOTIPY_CLIENT_ID = 'ebdf094ddbc1498a883d5ad51aaa1713'
-SPOTIPY_CLIENT_SECRET = '9c078d61844a4d87959c083363fffa41'
-SPOTIPY_REDIRECT_URI = 'http://localhost:8000/callback'
+SPOTIPY_CLIENT_ID=ebdf094ddbc1498a883d5ad51aaa1713
+SPOTIPY_CLIENT_SECRET=bcee77ef06024390a97d08d72ccf550d
