feat(chatbot): :sparkles: Add chatbot request
Add chatbot request

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -12,7 +12,8 @@
     "recents",
     "history",
     "favorites",
-    "details"
+    "details",
+    "chatbot"
   ],
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
